--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,7 +3,7 @@
     <div class="mt-3">
         <h2>All Listings</h2>
     </div>
-    
+
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let list of allListings) { %>
         <a href="/listings/<%= list._id %>" class="listing-link">
@@ -12,12 +12,21 @@
                     alt="<%= list.image.url %>" style="height: 20rem;">
                 <div class="card-img-overlay"></div>
                 <div class="card-body">
-                    <p class="card-text"><b><%= list.title %></b> <br> &#8377;
-                        <%= list.price.toLocaleString("en-IN") %> /night</p>
+                    <p class="card-text">
+                        <b><%= list.title %></b>
+                        <br>
+                        <% if (list.price) { %>
+                        <%= list.price.toLocaleString("en-IN", { style:
+                        'currency', currency: 'INR' }) %> /night
+                        <% } else { %>
+                        Price unavailable
+                        <% } %>
+                    </p>
                 </div>
             </div>
         </a>
         <% } %>
+
     </div>
 
 </body>
