--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,44 +3,63 @@
     <div class="row">
         <div class="col-8 offset-2 mt-3">
             <h2>Create a new listing</h2>
-            <form action="/listings" method="post">
+            <form action="/listings" method="post" novalidate
+                class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" name="listing[title]"
                         placeholder="Enter title"
-                        class="form-control">
+                        class="form-control" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="description"
                         class="form-label">Description</label>
                     <textarea name="listing[description]"
-                        class="form-control"></textarea>
+                        class="form-control" required></textarea>
+                    <div class="invalid-feedback">
+                        Please enter a short description
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image Link</label>
-                    <input type="text" name="listing[image.url]"
+                    <input type="text" name="listing[image][url]"
                         placeholder="Enter img/url link" class="form-control">
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
                         <input name="listing[price]" type="number"
-                            placeholder="Enter price"
-                            class="form-control">
+                            placeholder="1500"
+                            class="form-control" required>
+                        <div class="invalid-feedback">
+                            Price should be valid
+                        </div>
                     </div>
                     <div class="mb-3 col-md-8">
                         <label for="Country" class="form-label">Country</label>
                         <input type="text" name="listing[country]"
-                            placeholder="Enter country" class="form-control">
+                            placeholder="India" class="form-control"
+                            required>
+                        <div class="invalid-feedback">
+                            Country name should be valid
+                        </div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
                     <input type="text" name="listing[location]"
-                        placeholder="Enter location" class="form-control">
+                        placeholder="Babra,Gujarat" class="form-control"
+                        required>
+                    <div class="invalid-feedback">
+                        Location should be valid
+                    </div>
                 </div>
                 <button class="btn btn-dark add-btn">Add</button>
             </form>
         </div>
     </div>
 </body>
+<script src="/js/script.js"></script>
