--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,6 +21,7 @@
     <body>
         <%- include("../includes/navbar.ejs") %>
         <div class="container">
+            <%- include("../listings/flash.ejs") %>
             <%- body -%>
         </div>
         <%- include("../includes/footer.ejs") %>
@@ -29,4 +30,5 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
     </body>
+    <script src="/js/script.js"></script>
 </html>
