--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let list of allListings) { %>
         <a href="/listings/<%= list._id %>" class="listing-link">
-            <div class="card col">
+            <div class="card col card-listings">
                 <img src="<%= list.image.url %>" class="card-img-top"
                     alt="<%= list.image.url %>" style="height: 20rem;">
                 <div class="card-img-overlay"></div>
