--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,6 +17,11 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" href="/css/rating.css">
+        <link href="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.css"
+            rel="stylesheet">
+        <script
+            src="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.js"></script>
     </head>
     <body>
         <%- include("../includes/navbar.ejs") %>
