--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,8 @@
     <div class="col-8 offset-2 mt-2">
         <h2>Edit your listing</h2>
         <form action="/listings/<%= list._id %>/?_method=PUT"
-            method="post" class="needs-validation" novalidate>
+            method="post" class="needs-validation" novalidate
+            enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" name="listing[title]"
@@ -22,13 +23,17 @@
                     Please Enter a short description
                 </div>
             </div>
+
             <div class="mb-3">
-                <label for="image" class="form-label">Image</label>
-                <input type="text" name="listing[image][url]"
-                    value="<%= list.image.url %>" class="form-control" required>
-                <div class="invalid-feedback">
-                    Enter valid image-link
-                </div>
+                Original Listing Image <br>
+                <img src="<%= originalImage%>" height="150em" width="200em">
+            </div>
+
+            <div class="mb-3">
+                <label for="image" class="form-label">Upload new image</label>
+                <input type="file" name="listing[image][url]"
+                    value="<%= list.image.url %>" class="form-control">
+
             </div>
             <div class="row">
                 <div class="mb-3 col-md-4">
