--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2 mt-3">
             <h2>Create a new listing</h2>
             <form action="/listings" method="post" novalidate
-                class="needs-validation">
+                class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" name="listing[title]"
@@ -24,9 +24,9 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image Link</label>
-                    <input type="text" name="listing[image][url]"
-                        placeholder="Enter img/url link" class="form-control">
+                    <label for="image" class="form-label">Upload Image</label>
+                    <input type="file" name="listing[image][url]"
+                        class="form-control" required>
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
